ping_pong/manifest/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong-rollout
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  strategy:
    canary:
      steps:
      - setWeight: 100
      - analysis:
          templates:
            - templateName: cpu-rate
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: PROJECT/IMAGE
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /readyz
              port: 8080
