ping_pong/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: pingpong
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 8080
